--- a/pepito.html
+++ b/pepito.html
@@ -6,6 +6,10 @@
     <title>pepito</title>
 </head>
 <body>
+    <footer>
+        <p>HOLA ESTA PAGINA ES DE DIEGO</p>
+    </footer>
+
     
 </body>
 </html>
